--- a/public/app/partials/about.html
+++ b/public/app/partials/about.html
@@ -1,6 +1,8 @@
-<div class="row page-title">
-    <h5>About</h5>
-</div>
-<div class="row">
-    <p>This page is alllllllll about me! WOO!</p>    
+<div class="about-page">
+    <div class="row page-title">
+        <h4>About</h4>
+    </div>
+    <div class="row">
+        <p>This page is alllllllll about me! WOO!</p>    
+    </div>
 </div>
