--- a/public/app/partials/home.html
+++ b/public/app/partials/home.html
@@ -1,6 +1,8 @@
-<div class="row page-title">
-    <h5>Home</h5>
-</div>
-<div class="row">
-    <p>This page is the default!</p>    
+<div class="home-page">
+    <div class="row page-title">
+        <h4>Home</h4>
+    </div>
+    <div class="row">
+        <p>This page is the default!</p>    
+    </div>
 </div>
