--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -13,11 +13,25 @@ a {
     }
 }
 
+/* Helpers */
+
+.text-right {
+    text-align: right;
+}
+
+.text-left {
+    text-align: left;
+}
+
+/* Plugin Overrides */
+
 #ngProgress {
     color: $dark-color !important;
     box-shadow: none !important;
     background-color: $dark-color !important;
 }
+
+/* Header and Navbar */
 
 .header {
     padding-top: 2.5rem;
@@ -63,23 +77,30 @@ a {
     }
 }
 
-.hero {
-    margin: 1rem;
-    font-size: 2em;
-}
-
-.text-right {
-    text-align: right;
-}
-
-.text-left {
-    text-align: left;
-}
-
 .social-media 
 {
     > a {
         font-size: 2rem;
         padding: .25rem;
+    }
+}
+
+/* /cv */
+.curriculum-vitae-page {
+    .cv-section {
+        border-top: 1px dotted $dark-color;
+        padding-top: 2rem;
+        
+        h5 {
+            text-transform: uppercase;
+            font-size: 1.4rem;
+            font-weight: 500;
+            letter-spacing: .05rem;
+        }
+        
+        p {
+            font-size: 1.2rem;
+            line-height: 1.4rem;
+        }
     }
 }
