--- a/public/app/partials/cv.html
+++ b/public/app/partials/cv.html
@@ -3,20 +3,36 @@
         <h4>CV</h4>
     </div>
     <div class="row cv-section">
-        <h5>Profile</h5>
-        <p>This section is a brief description about me, maybe a more concise version 
-            of what is detailed on the About page.</p>    
+        <div class="three columns tr-d">
+            <h5>Profile</h5>
+        </div>
+        <div class="nine columns">
+            <p>This section is a brief description about me, maybe a more concise version 
+                of what is detailed on the About page.</p>    
+        </div>
     </div>
     <div class="row cv-section">
-        <h5>Education</h5>
-        <p>This is the section for my education! I think we will need a nice responsive section here.</p>
+        <div class="three columns tr-d">
+            <h5>Education</h5>
+        </div>
+        <div class="nine columns">
+            <p>This is the section for my education! I think we will need a nice responsive section here.</p>
+        </div>
     </div>
-    <div class="row cv-section">
-        <h5>Expertise</h5>
-        <p></p>
+    <div class="row cv-section tr-d">
+        <div class="three columns tr-d">
+            <h5>Expertise</h5>
+        </div>
+        <div class="nine columns">
+            <p></p>
+        </div>
     </div>
-    <div class="row cv-section">
-        <h5>Experience</h5>
-        <p></p>
+    <div class="row cv-section tr-d">
+        <div class="three columns tr-d">
+            <h5>Experience</h5>
+        </div>
+        <div class="nine columns">
+            <p></p>
+        </div>
     </div>
 </div>
