--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -7,100 +7,105 @@ $highlight-color: #c06c84;
 }
 
 a {
-    color: $dark-color;
-    &:hover {
-        color: $highlight-color;
-    }
+  color: $dark-color;
+  
+  &:hover {
+    color: $highlight-color;
+  }
 }
 
-/* Helpers */
+// Helpers
 
 .text-right {
-    text-align: right;
+  text-align: right;
 }
 
 .text-left {
-    text-align: left;
+  text-align: left;
 }
 
-/* Plugin Overrides */
-
+// Plugin Overrides
+// scss-lint:disable IdSelector, SelectorFormat, ImportantRule
 #ngProgress {
-    color: $dark-color !important;
-    box-shadow: none !important;
-    background-color: $dark-color !important;
+  background-color: $dark-color !important;
+  box-shadow: none !important;
+  color: $dark-color !important;
 }
 
-/* Header and Navbar */
+// Header and Navbar
 
 .header {
-    padding-top: 2.5rem;
-    text-align: center;
-    padding-bottom: 2.5rem;
+  padding-bottom: 2.5rem;
+  padding-top: 2.5rem;
+  text-align: center;
     
-    > h2 {
-        margin: 0;
-    }
+  > h2 {
+    margin: 0;
+  }
 }
 
 .navbar {
-    border-top: 1px solid $light-color;
-    border-bottom: 1px solid $light-color;
-    
-    > ul {
-        list-style: none;
-        margin: 0;
-        
-        > li {
-            display: inline-block;
-            margin: 0;
-            
-            > a {
-                margin-right: 3.3rem;
-                text-transform: uppercase;
-                text-decoration: none;
-                font-weight: 600;
-                font-size: 11px;
-                letter-spacing: .2rem;
-                line-height: 6.5rem;                
-            }
-        }
-    }
+  border-bottom: 1px solid $light-color;
+  border-top: 1px solid $light-color;
+}
+
+.navbar-inline {
+  list-style: none;
+  margin: 0;
+}
+
+.navbar-inline-item {
+  display: inline-block;
+  margin: 0;
+}
+
+.navbar-inline-link {
+  font-size: 11px;
+  font-weight: 600;
+  letter-spacing: .2rem;
+  line-height: 6.5rem;   
+  margin-right: 3.3rem;   
+  text-decoration: none; 
+  text-transform: uppercase; 
 }
 
 .page-title {
-    margin-top: 1rem;
-    margin-bottom: 1rem;    
+  margin-bottom: 1rem;    
+  margin-top: 1rem;
     
-    > h1, h2, h3, h4, h5, h6 {
-        margin: 0;
-    }
+  > h1, 
+    h2, 
+    h3, 
+    h4, 
+    h5, 
+    h6 {
+    margin: 0;
+  }
 }
 
-.social-media 
-{
-    > a {
-        font-size: 2rem;
-        padding: .25rem;
-    }
+.social-media {
+  > a {
+    font-size: 2rem;
+    padding: .25rem;
+  }
 }
 
-/* /cv */
+// /cv
 .curriculum-vitae-page {
-    .cv-section {
-        border-top: 1px dotted $dark-color;
-        padding-top: 2rem;
+  .cv-section {
+    border-top: 1px dotted $dark-color;
+    padding-top: 2rem;
         
-        h5 {
-            text-transform: uppercase;
-            font-size: 1.4rem;
-            font-weight: 500;
-            letter-spacing: .05rem;
-        }
-        
-        p {
-            font-size: 1.2rem;
-            line-height: 1.4rem;
-        }
+    h5 {
+      font-size: 1.4rem;
+      font-weight: 500;
+      letter-spacing: .05rem;
+      text-transform: uppercase;
     }
+        
+    p {
+      font-size: 1.2rem;
+      line-height: 1.4rem;
+    }
+  }
 }
