--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -16,6 +16,73 @@ a {
 
 // Helpers
 
+@media print {
+  // scss-lint:disable ImportantRule
+  .social-media {
+    text-align: center !important;
+  }
+  
+  // scss-lint:disable ImportantRule
+  .social-label {
+    bottom: 3px !important;
+    display: inline-block !important;
+    position: relative !important;
+  }
+
+  i:after {
+    bottom: 2px;
+    font-size: 1.2rem;
+    font-style: normal;
+    margin-left: 2px;
+    position: relative;
+  }
+  
+  .curriculum-vitae-page {
+    
+    .page-title {
+      display: none;
+    }
+    
+    // scss-lint:disable ImportantRule
+    .social-label {
+      display: inline-block !important;
+    }
+  }
+  
+  .navbar {
+    display: none;
+  }
+}
+
+@media (min-width: 550px) {
+  .tr-d {
+    text-align: right;
+  }
+  
+  .tl-d {
+    text-align: left;
+  }
+}
+
+@media (max-width: 549px) {
+  .tr-m {
+    text-align: right;
+  }
+  
+  .tl-m {
+    text-align: left;
+  }
+}
+
+.social-label {
+  bottom: 2px;
+  display: none;
+  font-size: 1.2rem;
+  margin-right: 5px;
+  padding-left: 3px;
+  position: relative;
+}
+
 .text-right {
   text-align: right;
 }
@@ -84,6 +151,8 @@ a {
 }
 
 .social-media {
+  text-align: right;
+  
   > a {
     font-size: 2rem;
     padding: .25rem;
@@ -93,19 +162,19 @@ a {
 // /cv
 .curriculum-vitae-page {
   .cv-section {
-    border-top: 1px dotted $dark-color;
     padding-top: 2rem;
-        
+    
     h5 {
       font-size: 1.4rem;
       font-weight: 500;
       letter-spacing: .05rem;
       text-transform: uppercase;
     }
-        
+    
     p {
       font-size: 1.2rem;
-      line-height: 1.4rem;
+      line-height: 1.5rem;
+      margin-top: .3rem;
     }
   }
 }
