* Added defaultWatch grunt task * Added partial for social media links and removed from index * Added content and css for expertise and education.

--- a/public/app/partials/cv.html
+++ b/public/app/partials/cv.html
@@ -4,7 +4,7 @@
     </div>
     <div class="row cv-section">
         <div class="three columns tr-d">
-            <h5>Profile</h5>
+            <h5 class="cv-section-title">Profile</h5>
         </div>
         <div class="nine columns">
             <p>This section is a brief description about me, maybe a more concise version 
@@ -13,23 +13,63 @@
     </div>
     <div class="row cv-section">
         <div class="three columns tr-d">
-            <h5>Education</h5>
+            <h5 class="cv-section-title">Education</h5>
         </div>
         <div class="nine columns">
-            <p>This is the section for my education! I think we will need a nice responsive section here.</p>
+            <div class="education-grid">
+                <div class="education">
+                    <h5 class="qualification">BSc (Hons) Database Administration and Management</h5>
+                    <h6 class="establishment">Staffordshire University</h6>
+                    <p class="years-active">2009 - 2013</p>
+                </div>
+                <div class="education">
+                    <h5 class="qualification">BTEC National Diploma for IT Practitioners</h5>
+                    <h6 class="establishment">Canterbury College</h6>
+                    <p class="years-active">2007 - 2009</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row cv-section">
+        <div class="three columns tr-d">
+            <h5 class="cv-section-title">Expertise</h5>
+        </div>
+        <div class="nine columns">
+            <div class="expertise-grid">
+                <div class="expertise">
+                    <h6 class="expertise-name">HTML5</h6>
+                </div>  
+                <div class="expertise">
+                    <h6 class="expertise-name">CSS3</h6>
+                </div>
+                <div class="expertise">
+                    <h6 class="expertise-name">AngularJS</h6>
+                </div>
+                <div class="expertise">
+                    <h6 class="expertise-name">Bootstrap</h6>
+                </div>
+                <div class="expertise">
+                    <h6 class="expertise-name">JavaScript</h6>
+                </div>
+                <div class="expertise">
+                    <h6 class="expertise-name">CoffeeScript</h6>
+                </div>
+                <div class="expertise">
+                    <h6 class="expertise-name">TypeScript</h6>
+                </div>
+                <div class="expertise">
+                    <h6 class="expertise-name">C#</h6>
+                </div>  
+                <div class="ask-me-container">
+                    <p>I've only included my strongest skills here, looking for something in particular?</p>
+                    <input type="text" placeholder="I.e. 'Angular' or 'SQL'" /> <button type="button">Check</button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row cv-section tr-d">
         <div class="three columns tr-d">
-            <h5>Expertise</h5>
-        </div>
-        <div class="nine columns">
-            <p></p>
-        </div>
-    </div>
-    <div class="row cv-section tr-d">
-        <div class="three columns tr-d">
-            <h5>Experience</h5>
+            <h5 class="cv-section-title">Experience</h5>
         </div>
         <div class="nine columns">
             <p></p>
