--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -62,6 +62,22 @@ a {
   .tl-d {
     text-align: left;
   }
+  
+  .education {
+    display: inline-block;
+    vertical-align: top;
+    width: 48%;
+    
+    // scss-lint:disable ImportantRule
+    + .education {
+      margin-top: 0 !important;
+    }
+  }
+  
+  // scss-lint:disable ImportantRule
+  .expertise {
+    width: 32% !important;
+  }
 }
 
 @media (max-width: 549px) {
@@ -164,17 +180,56 @@ a {
   .cv-section {
     padding-top: 2rem;
     
-    h5 {
+    .cv-section-title {
       font-size: 1.4rem;
       font-weight: 500;
       letter-spacing: .05rem;
       text-transform: uppercase;
     }
+  }
+  
+  .education {
+    // border-left: 1px solid $highlight-color;
+    box-sizing: border-box;
+    padding-left: .5rem;
     
-    p {
-      font-size: 1.2rem;
-      line-height: 1.5rem;
-      margin-top: .3rem;
+    + .education {
+      margin-top: 1.5rem;
     }
+  }
+  
+  .expertise {
+    // border-left: 1px solid $highlight-color;
+    box-sizing: border-box;
+    display: inline-block;
+    padding-left: .5rem;
+    width: 49%;
+  }
+  
+  .expertise-name {
+    font-size: 1.2rem;
+    margin: 0;
+  }
+  
+  .qualification {
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+    margin-bottom: 0;
+  }
+  
+  .establishment {
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.2rem;
+    margin-bottom: 0;
+    padding-bottom: .5rem;
+    padding-top: .5rem;
+  }
+  
+  .years-active {
+    font-size: 1.2rem;
+    font-weight: 300;
+    line-height: 1.2rem;
+    margin: 0;
   }
 }
