* Added default task to gruntfile * Initial formatting for "ask me" section of CV * Minor change to formatting of app.routes.coffee * Added .ask-me-message to main.scss

--- a/public/app/partials/cv.html
+++ b/public/app/partials/cv.html
@@ -61,8 +61,15 @@
                     <h6 class="expertise-name">C#</h6>
                 </div>  
                 <div class="ask-me-container">
-                    <p>I've only included my strongest skills here, looking for something in particular?</p>
-                    <input type="text" placeholder="I.e. 'Angular' or 'SQL'" /> <button type="button">Check</button>
+                    <p class="ask-me-message">I've only included my strongest skills here, looking for something in particular?</p>
+                    <div>
+                        <div style="width: 70%; float: left; padding-right: 1rem; box-sizing: border-box;">
+                            <input type="text" placeholder="I.e. 'Angular' or 'SQL'" style="width: 100%;">
+                        </div>
+                        <div style="width: 30%; float: left;">
+                            <button type="button" style="display: block;width: 100%;">Check</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
