--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,249 +14,10 @@ a {
   }
 }
 
-// Helpers
+@import 'utility';
 
-@media print {
-  .no-print {
-    display: none;
-  }
+@import 'header';
 
-  // scss-lint:disable ImportantRule
-  .social-media {
-    text-align: center !important;
-  }
-  
-  // scss-lint:disable ImportantRule
-  .social-label {
-    bottom: 3px !important;
-    display: inline-block !important;
-    position: relative !important;
-  }
+@import 'cv';
 
-  i:after {
-    bottom: 2px;
-    font-size: 1.2rem;
-    font-style: normal;
-    margin-left: 2px;
-    position: relative;
-  }
-  
-  .curriculum-vitae-page {
-    // scss-lint:disable ImportantRule
-    .social-label {
-      display: inline-block !important;
-    }
-  }
-}
-
-@media (min-width: 550px) {
-  .tr-d {
-    text-align: right;
-  }
-  
-  .tl-d {
-    text-align: left;
-  }
-  
-  .education {
-    display: inline-block;
-    vertical-align: top;
-    width: 48%;
-    
-    // scss-lint:disable ImportantRule
-    + .education {
-      margin-top: 0 !important;
-    }
-  }
-  
-  // scss-lint:disable ImportantRule
-  .expertise {
-    width: 32% !important;
-  }
-}
-
-@media (max-width: 549px) {
-  .tr-m {
-    text-align: right;
-  }
-  
-  .tl-m {
-    text-align: left;
-  }
-}
-
-.social-label {
-  bottom: 2px;
-  display: none;
-  font-size: 1.2rem;
-  margin-right: 5px;
-  padding-left: 3px;
-  position: relative;
-}
-
-.text-right {
-  text-align: right;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.clearfix {
-  clear: both;
-}
-
-.no-margin {
-  margin: 0;
-}
-
-.lbl {
-  border-radius: 6px;
-  border-style: solid;
-  border-width: 1px;
-  font-size: 1.4rem;
-  padding-left: 3px;
-  padding-right: 3px;
-  text-align: center;
-
-  + .lbl {
-    margin-left: 5px;
-  }
-
-  &.lbl-outline {
-    border-color: #eee;
-  }
-}
-
-// Plugin Overrides
-// scss-lint:disable IdSelector, SelectorFormat, ImportantRule
-#ngProgress {
-  background-color: $dark-color !important;
-  box-shadow: none !important;
-  color: $dark-color !important;
-}
-
-// Header and Navbar
-
-.header {
-  padding-bottom: 2.5rem;
-  padding-top: 2.5rem;
-  text-align: center;
-    
-  > h2 {
-    margin: 0;
-  }
-}
-
-.navbar {
-  border-bottom: 1px solid $light-color;
-  border-top: 1px solid $light-color;
-}
-
-.navbar-inline {
-  list-style: none;
-  margin: 0;
-}
-
-.navbar-inline-item {
-  display: inline-block;
-  margin: 0;
-}
-
-.navbar-inline-link {
-  font-size: 11px;
-  font-weight: 600;
-  letter-spacing: .2rem;
-  line-height: 6.5rem;   
-  margin-right: 3.3rem;   
-  text-decoration: none; 
-  text-transform: uppercase; 
-}
-
-.page-title {
-  margin-bottom: 1rem;    
-  margin-top: 1rem;
-    
-  > h1, 
-    h2, 
-    h3, 
-    h4, 
-    h5, 
-    h6 {
-    margin: 0;
-  }
-}
-
-.social-media {
-  text-align: right;
-  
-  > a {
-    font-size: 2rem;
-    padding: .25rem;
-  }
-}
-
-// /cv
-.curriculum-vitae-page {
-
-  .ask-me-message {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-  }
-  
-  .cv-section {
-    padding-top: 2rem;
-    
-    .cv-section-title {
-      font-size: 1.4rem;
-      font-weight: 500;
-      letter-spacing: .05rem;
-      text-transform: uppercase;
-    }
-  }
-  
-  .education {
-    // border-left: 1px solid $highlight-color;
-    box-sizing: border-box;
-    padding-right: .5rem;
-    
-    + .education {
-      margin-top: 1.5rem;
-    }
-  }
-  
-  .expertise {
-    // border-left: 1px solid $highlight-color;
-    box-sizing: border-box;
-    display: inline-block;
-    padding-right: .5rem;
-    width: 49%;
-  }
-  
-  .expertise-name {
-    font-size: 1.4rem;
-    margin: 0;
-  }
-  
-  .qualification {
-    font-size: 1.5rem;
-    line-height: 1.8rem;
-    margin-bottom: 0;
-  }
-  
-  .establishment {
-    font-size: 1.2rem;
-    font-weight: 400;
-    line-height: 1.2rem;
-    margin-bottom: 0;
-    padding-bottom: .5rem;
-    padding-top: .5rem;
-  }
-  
-  .years-active {
-    font-size: 1.2rem;
-    font-weight: 300;
-    line-height: 1.2rem;
-    margin: 0;
-  }
-}
+@import 'media';
