--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -6,14 +6,14 @@
   .social-media {
     text-align: center;
   }
-  
+
   .social-label {
     bottom: 3px;
     display: inline-block;
     position: relative;
   }
 
-  i:after {
+  i::after {
     bottom: 2px;
     font-size: 1.2rem;
     font-style: normal;
@@ -26,11 +26,11 @@
   .tr-d {
     text-align: right;
   }
-  
+
   .tl-d {
     text-align: left;
   }
-  
+
   .curriculum-vitae-page {
 
     .education {
@@ -42,7 +42,7 @@
         margin-top: 0;
       }
     }
-    
+
     .expertise {
       width: 32%;
     }
@@ -53,7 +53,7 @@
   .tr-m {
     text-align: right;
   }
-  
+
   .tl-m {
     text-align: left;
   }
