Small amount of work on Experience section * Renamed Job.responsibilities to Job.description * Removed Bar Staff job from array * Adjusted _cv.scss - need to work on this further * Refactored part of the cv.html partial, added classes to job elements

--- a/src/sass/_cv.scss
+++ b/src/sass/_cv.scss
@@ -1,3 +1,5 @@
+$border-color: #ddd;
+
 .curriculum-vitae-page {
 
   .ask-me-message {
@@ -13,6 +15,7 @@
       font-size: 1.4rem;
       font-weight: 500;
       letter-spacing: .05rem;
+      line-height: 1.4rem;
       text-transform: uppercase;
     }
   }
@@ -31,23 +34,23 @@
     display: inline-block;
     padding-right: .5rem;
     width: 49%;
-  }
 
-  .expertise-name {
-    font-size: 1.4rem;
-    margin: 0;
+    > .expertise-name {
+      font-size: 1.4rem;
+      line-height: 1.4rem;
+      margin: 0;
+    }
   }
 
   .qualification {
-    font-size: 1.5rem;
-    line-height: 1.8rem;
+    font-size: 1.8rem;
+    line-height: 2rem;
     margin-bottom: 0;
   }
 
   .establishment {
-    font-size: 1.2rem;
-    font-weight: 400;
-    line-height: 1.2rem;
+    font-size: 1.6rem;
+    line-height: 1.8rem;
     margin-bottom: 0;
     padding-bottom: .5rem;
     padding-top: .5rem;
@@ -58,5 +61,30 @@
     font-weight: 300;
     line-height: 1.2rem;
     margin: 0;
+  }
+
+  .job {
+    + .job {
+      border-top: 1px dashed $border-color;
+      padding-top: 2rem;
+    }
+
+    > .job-title {
+      font-size: 1.8rem;
+      line-height: 1.8rem;
+      margin-bottom: 1rem;
+    }
+
+    > .job-location {
+      font-size: 1.7rem;
+      line-height: 1.7rem;
+      margin-bottom: 1rem;
+    }
+
+    > .job-date-range {
+      font-size: 1.3rem;
+      line-height: 1.3rem;
+      margin-bottom: 1rem;
+    }
   }
 }
